RESOLVED FIXED113975
WebKit should not expose AXSubrole:AXDescriptionList on Mountain Lion as it causes a regression in VoiceOver behavior
https://bugs.webkit.org/show_bug.cgi?id=113975
Summary WebKit should not expose AXSubrole:AXDescriptionList on Mountain Lion as it c...
James Craig
Reported 2013-04-04 16:27:25 PDT
WebKit should not expose AXSubrole:AXDescriptionList on Mountain Lion as it causes a regression in VoiceOver behavior. Should just use the old AXDefinitionList.
Attachments
patch (6.85 KB, patch)
2013-04-12 13:24 PDT, James Craig
no flags
patch with review feedback (6.67 KB, patch)
2013-04-12 16:10 PDT, James Craig
no flags
Radar WebKit Bug Importer
Comment 1 2013-04-04 16:28:54 PDT
James Craig
Comment 2 2013-04-12 13:24:04 PDT
chris fleizach
Comment 3 2013-04-12 15:22:50 PDT
Comment on attachment 197879 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=197879&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1759 > + // fall back to NSAccessibilityDefinitionListSubrole in 10.8 and earlier you can remove this comment. it is self-evident by reading the code > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1760 > + #if __MAC_OS_X_VERSION_MIN_REQUIRED < 1090 these macros should start at the beginning of the line
James Craig
Comment 4 2013-04-12 16:10:06 PDT
Created attachment 197903 [details] patch with review feedback
WebKit Commit Bot
Comment 5 2013-04-15 18:33:02 PDT
Comment on attachment 197903 [details] patch with review feedback Clearing flags on attachment: 197903 Committed r148484: <http://trac.webkit.org/changeset/148484>
WebKit Commit Bot
Comment 6 2013-04-15 18:33:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.