WebKit should not expose AXSubrole:AXDescriptionList on Mountain Lion as it causes a regression in VoiceOver behavior https://bugs.webkit.org/show_bug.cgi?id=113975

Patch by James Craig <james@cookiecrook.com> on 2013-04-15
Reviewed by Chris Fleizach.

Serve NSAccessibilityDescriptionListSubrole or NSAccessibilityDefinitionListSubrole
depending on platform. Updated existing test coverage.

Source/WebCore:

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper subrole]):

LayoutTests:

* platform/mac/accessibility/lists-expected.txt:
* platform/mac/accessibility/role-subrole-roledescription-expected.txt:
* platform/mac/accessibility/role-subrole-roledescription.html:

Canonical link: https://commits.webkit.org/133031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148484 268f45cc-cd09-0410-ab3c-d52691b4dbfc